add_executable(lru_test lru_test.cpp)
add_executable(murmur3_test murmur3_test.cpp)
add_executable(disk_test disk_test.cpp)
add_executable(disk_bitmap_test disk_bitmap_test.cpp)
add_executable(disk_bucket_page_test disk_bucket_page_test.cpp)
add_executable(disk_directory_region_test disk_directory_region_test.cpp)
add_executable(disk_hash_table_test disk_hash_table_test.cpp)

target_link_libraries(murmur3_test hybridfs)
target_link_libraries(disk_test hybridfs)
target_link_libraries(disk_bitmap_test hybridfs)
target_link_libraries(disk_bucket_page_test hybridfs)
target_link_libraries(disk_directory_region_test hybridfs)
target_link_libraries(disk_hash_table_test hybridfs)